# parnter_connect

./: README.md  displayed_questions copy.json  main.spec  pyproject.toml
partner_connect/: main.py  test_vragen.json  vragen.json
tests/: test_main.py
