[tool.poetry]
name = "partner-connect"
version = "0.1.0"
description = ""
authors = ["Demas Jaring <dcjaring@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pillow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
